# docs/swagger.json
@@ -87,17 +87,6 @@
                     "Chat"
                 ],
                 "summary": "Create a new chat room",
-                "parameters": [
-                    {
-                        "description": "Chat Details",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.ChatRoomCreate"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -803,17 +792,6 @@
                     "type": "string"
                 },
                 "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.ChatRoomCreate": {
-            "type": "object",
-            "required": [
-                "user_id"
-            ],
-            "properties": {
-                "user_id": {
                     "type": "string"
                 }
             }
